--- a/robot-parts.html
+++ b/robot-parts.html
@@ -2,18 +2,18 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title>Robot Parts Co. • Every part to conquer the world • Robot Mega City 1, RoboCountry211</title>
+  <title>Robot Parts • Robot Parts Co.</title>
   <link href="css/main.css" rel="stylesheet">
   <meta name="ICBM" content="45.41117.-75.69812">
   <meta name="geo.position" content="45.41117.-75.69812">
   <meta name="geo.region" content="ca-on">
   <meta name="geo.placename" content="Ottawa">
   <meta property="og:type" content="website">
-  <meta property="og:title" content="Robot Parts Co. • Every part to conquer the world">
-  <meta property="og:url" content="https://robotparts.co/">
+  <meta property="og:title" content="Robot Parts • Robot Parts Co.">
+  <meta property="og:url" content="https://robotparts.co/robot-parts">
   <meta property="og:image" content="https://robotparts.co/images/social.jpg">
   <meta property="og:site_name" content="Robot Parts Co.">
-  <meta property="og:description" content="A mega conglomerate corporation selling and servicing all totalitarian robots.">
+  <meta property="og:description" content="Every part or piece a destructive robot needs: gears, rotors, manipulators, sensors, power cells and more.">
   <meta property="og:locale" content="en_CA">
   <meta property="twitter:card" content="summary">
   <meta property="twitter:site" content="@robotpartsco">
@@ -21,7 +21,7 @@
 <body>
 
   <header>
-    <h1><img src="images/robot-parts-co.svg" alt="Robot Parts Co."></h1>
+    <strong><img src="images/robot-parts-co.svg" alt=""></strong>
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
@@ -32,9 +32,15 @@
   </header>
 
   <main>
-    <p><strong>Every part a destructive robot needs for total world domination.</strong></p>
-    <img src="images/gears-power-cells.svg" alt="A selection of the best gears and power cells available to buy">
-    <a href="robot-parts.html">Buy robot parts</a>
+    <h1>Robot Parts</h1>
+
+    <ul>
+      <li>Gears</li>
+      <li>Rotors</li>
+      <li>Manipulators</li>
+      <li>Sensors</li>
+      <li>Power cells</li>
+    </ul>
   </main>
 
   <footer>
