Fix some errors

--- a/robot-parts.html
+++ b/robot-parts.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>Robot Parts • Robot Parts Co.</title>
   <link href="css/main.css" rel="stylesheet">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
   <meta name="ICBM" content="45.41117.-75.69812">
   <meta name="geo.position" content="45.41117.-75.69812">
   <meta name="geo.region" content="ca-on">
@@ -46,6 +47,23 @@
   <footer>
     <p>© 2027 Robot Parts Co.</p>
   </footer>
+
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "name": "Robot Parts Co.",
+      "email": "parts@robotparts.co",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "1234 Robot Lane",
+        "addressLocality": "Robot Mega City 1",
+        "addressRegion": "RoboStateB",
+        "addressCountry": "RoboCountry211",
+        "postalCode": "11001010100101001"
+      }
+    }
+  </script>
 
 </body>
 </html>
