--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>Contact • Robot Parts Co.</title>
   <link href="css/main.css" rel="stylesheet">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
   <meta name="ICBM" content="45.41117.-75.69812">
   <meta name="geo.position" content="45.41117.-75.69812">
   <meta name="geo.region" content="ca-on">
