--- a/robot-parts.html
+++ b/robot-parts.html
@@ -16,8 +16,12 @@
   <meta property="og:site_name" content="Robot Parts Co.">
   <meta property="og:description" content="Every part or piece a destructive robot needs: gears, rotors, manipulators, sensors, power cells and more.">
   <meta property="og:locale" content="en_CA">
-  <meta property="twitter:card" content="summary">
-  <meta property="twitter:site" content="@robotpartsco">
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:site" content="@robotpartsco">
+  <meta name="twitter:title" content="">
+  <meta name="twitter:url" content="">
+  <meta name="twitter:description" content="">
+  <meta name="twitter:image" content="">
 </head>
 <body>
 
